- Added length constraint to string columns - Moved secrets to pydantic settings from .env - Minor fixes

--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
 api:
+  debug: true
   title: "Shortener URLs API"
   prefix: "/api/v1"
   version: "1.0.0"
   max_batch_size: 10
   black_list_hosts: ["127.0.0.2"]
 db:
-  database_dsn: "postgresql+asyncpg://postgres:postgres@localhost:5432/collection"
   echo: false
